specs with broken code

--- a/.grunt/_SpecRunner.html
+++ b/.grunt/_SpecRunner.html
@@ -24,6 +24,10 @@
   
   <script src="../test/helpers/*.js"></script>
   
+  <script src="../src/query_hash.js"></script>
+  
+  <script src="../test/query_hash_test.js"></script>
+  
   <script src="grunt-contrib-jasmine/reporter.js"></script>
   
 
